--- a/app/views/characters/_options_table.html.erb
+++ b/app/views/characters/_options_table.html.erb
@@ -1,18 +1,23 @@
 <div class="field" data-controller="options-table">
   <%= f.label attr %>
-  <%= f.text_field attr, data: { options_table_target: "field" } %>
+  <div>
+    <%= f.text_field attr, data: { options_table_target: "field" } %>
+    <p data-options-table-target="description"></p>
+  </div>
   <table>
     <thead>
       <tr>
         <th><%= t ".roll" %></th>
         <th><%= t ".#{f.object.model_name.singular}.#{attr}", default: f.object.class.human_attribute_name(attr) %></th>
+        <th data-role="description"><%= t ".description" %></th>
       </tr>
     </thead>
     <tbody>
       <% collection.each do |roll, o| %>
         <%= tag.tr data: { options_table_target: "option", action: "click->options-table#pick" } do %>
-          <%= tag.th Array(roll).join("&thinsp;-&thinsp;").html_safe %>
-          <%= tag.td f.object.class.human_attribute_name "#{attr}.#{o}" %>
+          <%= tag.th Array(roll).join("&thinsp;-&thinsp;").html_safe, data: { role: "roll" } %>
+          <%= tag.td f.object.class.human_attribute_name "#{attr}.#{o}", data: { role: "value" } %>
+          <%= tag.td t(".descriptions.#{attr}.#{o}", default: ""), data: { role: "description" } %>
         <% end %>
       <% end %>
     </tbody>
@@ -26,10 +31,4 @@
       </tr>
     </tfoot>
   </table>
-  <!-- 
-  ## WIP for the optional description/details below the field. Could be set by the Stimulus controller
-  <p style="position: absolute; left: calc(var(--cutoff-width) + var(--border-width)); margin-top: 20%;">
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus quam laborum officia minus magnam non enim deleniti corrupti esse fuga ratione voluptas culpa nam obcaecati, reiciendis quis cumque minima deserunt!
-  </p>
-  -->
 </div>
