Removed the lockable behavior from options-table
This is getting complex, but quite interesting. The OptionsTable Stimulus
controller was able to do 2 things: pick a value AND be disabled. However,
the disabling in now handled by a different Stimulus controller, which
means that an lockabled options table means to have 2 controller attached:
OptionsTable and Lockable. Which is fine, execpt that the table behavior
must also change when the table is locked (picking an option must not be
possible).

So, the OptionsTable keeps a "picking-disabling" action, but it is *not*
called directly by any DOM element. Instead, the Lockable controller
sends an event, which the OptionsTable listens to.

Good stuff.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -364,7 +364,7 @@ fieldset.secondary-fields {
   --text-color: var(--clr-neutral-300);
 }
 
-.field[data-controller="options-carousel"] {
+.field[data-controller~="options-carousel"] {
   /* making room on both ends for the buttons so that their tip aligns with the focus indicator */
   --arrow-cutoff-width: calc(2 * var(--block-cutoff-width));
   --button-extra-margin: calc(var(--arrow-cutoff-width) + var(--block-cutoff-width));
@@ -418,7 +418,7 @@ fieldset.secondary-fields {
   }
 }
 
-.field[data-controller="options-table"] {
+.field[data-controller~="options-table"] {
   grid-column: main / end;
   
   display: grid;
