Added (almost all) the roles
Each roll is a partial and a class, the class being mostly a
description of a the available options (validation or other domain
logic could be added later).

Note: nomads are missing because they require a larger update to some JS
parts.

--- a/app/views/characters/_form.html.erb
+++ b/app/views/characters/_form.html.erb
@@ -131,7 +131,10 @@
   <fieldset id="role-lifepath" class="lifepath_entry">
     <legend><%= t ".role_lifepath" %></legend>
     
-    <%= render(f.object.role_lifepath, form: f) if f.object.role_lifepath? %>
+    <%= f.fields_for :role_lifepath, f.object.role_lifepath do |role_lp| %>
+      <%= role_lp.hidden_field :role %>
+      <%= render role_lp.object, form: role_lp %>
+    <% end if f.object.role_lifepath? %>
     
     <%= f.button(:next, value: "stats", class: "slanted-button next", data: { turbo: false }) { t(".next") } %>
   </fieldset>
